fix border in dark mode

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav {
     margin-bottom: 0.5em;
     border-bottom: 1px solid var(--border-color, oklch(80% 3% 200));
     --border-color: oklch(50% 10% 200 / 40%);
-    border-bottom: 1px solid var(--border-color, oklch(80% 3% 200));
+    border-bottom: 1px solid var(--border-color);
     background-color: var(--background-color, canvas);
     color: var(--text-color, canvastext);
   }
